--- a/Portal11/Web.config
+++ b/Portal11/Web.config
@@ -14,12 +14,15 @@
       <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
     </sectionGroup></configSections>
   <connectionStrings>
+    <!-- TODO: Replace the ****'s with the correct entries -->
     <add name="PortalConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Portal11-20150707103538.mdf;Initial Catalog=aspnet-Portal11-20150707103538;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="elmah-sqlserver" connectionString="Data Source=DAVE-YOGA-900\SQLEXPRESS;Initial Catalog=ElmahLoggedErrors;Integrated Security=True" providerName="System.Data.SqlClient" />
+  <!--<add name="elmah-sqlserver" connectionString="Data Source=****;User ID=****;Password=****;Initial Catalog=****;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <system.web>
-    <!--<customErrors mode="On" defaultRedirect="~/ErrorGeneral.aspx">
-      <error statusCode="404" redirect="~/ErrorLog/Error404.aspx" />
-    </customErrors>-->
+    <customErrors mode="On" defaultRedirect="~/ErrorLog/FatalError.aspx">
+      <!--<error statusCode="404" redirect="~/ErrorLog/Error404.aspx" />-->
+    </customErrors>
     <trust level="Full" />
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
@@ -87,7 +90,7 @@
     </security>
   <validation validateIntegratedModeConfiguration="false" />
     <staticContent>
-      <mimeMap fileExtension="woff2" mimeType="application/font-woff2"/>
+      <mimeMap fileExtension="woff2" mimeType="application/font-woff2" />
     </staticContent>
   </system.webServer>
   <runtime>
@@ -138,7 +141,9 @@
         more information on remote access and securing ELMAH.
     -->
     <security allowRemoteAccess="yes" />
-  </elmah><location path="elmah.axd" inheritInChildApplications="false">
+  <errorLog type="Elmah.SqlErrorLog, Elmah" connectionStringName="elmah-sqlserver" applicationName="CultureWorks Portal" />
+</elmah>
+  <location path="elmah.axd" inheritInChildApplications="false">
     <system.web>
       <httpHandlers>
         <add verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" />
