--- a/Portal11/packages.config
+++ b/Portal11/packages.config
@@ -6,6 +6,7 @@
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="elmah" version="1.2.2" targetFramework="net45" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net45" />
+  <package id="elmah.sqlserver" version="1.2" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="LINQKit" version="1.1.2" targetFramework="net45" />
