--- a/Portal11/Web.config
+++ b/Portal11/Web.config
@@ -13,6 +13,9 @@
       <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
       <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
     </sectionGroup></configSections>
+  <appSettings>
+    <add key="vs:EnableBrowserLink" value="false" />
+  </appSettings>
   <connectionStrings>
     <!-- TODO: Replace the ****'s with the correct entries -->
     <add name="PortalConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Portal11-20150707103538.mdf;Initial Catalog=aspnet-Portal11-20150707103538;Integrated Security=True" providerName="System.Data.SqlClient" />
@@ -26,7 +29,7 @@
     <trust level="Full" />
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" maxRequestLength="32768" />
+    <httpRuntime targetFramework="4.5" maxRequestLength="32768"/>
     <pages>
       <namespaces>
         <add namespace="System.Web.Optimization" />
