--- a/Portal11/Portal11.csproj
+++ b/Portal11/Portal11.csproj
@@ -175,7 +175,6 @@
     <Content Include="Account\ResetPasswordConfirmation.aspx" />
     <Content Include="Account\TwoFactorAuthenticationSignIn.aspx" />
     <Content Include="Account\VerifyPhoneNumber.aspx" />
-    <Content Include="Admin\AdjustParameters.aspx" />
     <Content Include="Admin\AssignEntitysToProject.aspx" />
     <Content Include="Admin\AssignGrantToProject.aspx" />
     <Content Include="Admin\AssignPersonsToProject.aspx" />
@@ -184,6 +183,7 @@
     <Content Include="Admin\EditPerson.aspx" />
     <Content Include="Admin\EditGLCode.aspx" />
     <Content Include="Admin\EditGrant.aspx" />
+    <Content Include="Admin\EmailParameters.aspx" />
     <Content Include="Admin\Main.aspx" />
     <Content Include="App_Readme\Elmah.SqlServer.sql" />
     <Content Include="App_Readme\Elmah.SqlServer.txt" />
@@ -435,13 +435,6 @@
     <Compile Include="Account\VerifyPhoneNumber.aspx.designer.cs">
       <DependentUpon>VerifyPhoneNumber.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Admin\AdjustParameters.aspx.cs">
-      <DependentUpon>AdjustParameters.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Admin\AdjustParameters.aspx.designer.cs">
-      <DependentUpon>AdjustParameters.aspx</DependentUpon>
-    </Compile>
     <Compile Include="Admin\AssignEntitysToProject.aspx.cs">
       <DependentUpon>AssignEntitysToProject.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -497,6 +490,13 @@
     </Compile>
     <Compile Include="Admin\EditGrant.aspx.designer.cs">
       <DependentUpon>EditGrant.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\EmailParameters.aspx.cs">
+      <DependentUpon>EmailParameters.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\EmailParameters.aspx.designer.cs">
+      <DependentUpon>EmailParameters.aspx</DependentUpon>
     </Compile>
     <Compile Include="Admin\Main.aspx.cs">
       <DependentUpon>Main.aspx</DependentUpon>
@@ -565,6 +565,7 @@
     <Compile Include="Logic\ExceptionActions.cs" />
     <Compile Include="Logic\ProjectClassActions.cs" />
     <Compile Include="Logic\QueryStringActions.cs" />
+    <Compile Include="Logic\SplitActions.cs" />
     <Compile Include="Logic\SupportingActions.cs">
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
