--- a/Portal11/packages.config
+++ b/Portal11/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="40-System.IO.Compression" version="1.0.0.2" targetFramework="net45" />
+  <package id="40-System.IO.Compression.FileSystem" version="1.0.0.2" targetFramework="net45" />
   <package id="AjaxControlToolkit" version="17.1.1.0" targetFramework="net45" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="AspNet.ScriptManager.bootstrap" version="3.0.0" targetFramework="net45" />
@@ -24,8 +26,12 @@
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.3.2" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.3.2" targetFramework="net45" />
+  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.6.0" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.3" targetFramework="net45" />
+  <package id="Microsoft.CodeQuality.Analyzers" version="2.6.0" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net45" developmentDependency="true" />
+  <package id="Microsoft.NetCore.Analyzers" version="2.6.0" targetFramework="net45" developmentDependency="true" />
+  <package id="Microsoft.NetFramework.Analyzers" version="2.6.0" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="3.0.0" targetFramework="net45" />
@@ -44,11 +50,14 @@
   <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net45" />
   <package id="System.Diagnostics.Debug" version="4.0.0" targetFramework="net45" />
   <package id="System.Globalization" version="4.0.0" targetFramework="net45" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net45" />
   <package id="System.Linq" version="4.0.0" targetFramework="net45" />
   <package id="System.Reflection.Metadata" version="1.2.0" targetFramework="net45" />
   <package id="System.Resources.ResourceManager" version="4.0.0" targetFramework="net45" />
   <package id="System.Runtime" version="4.0.0" targetFramework="net45" />
   <package id="System.Runtime.Extensions" version="4.0.0" targetFramework="net45" />
+  <package id="System.Shim" version="1.0.0.1" targetFramework="net45" />
   <package id="System.Threading" version="4.0.0" targetFramework="net45" />
+  <package id="Text.Analyzers" version="2.6.0" targetFramework="net45" developmentDependency="true" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
