--- a/Portal11/Portal11.csproj
+++ b/Portal11/Portal11.csproj
@@ -194,6 +194,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Account\AddPhoneNumber.aspx" />
+    <Content Include="Account\ChangeMyAvatarImage.aspx" />
     <Content Include="Account\ChangeMyEmailOptions.aspx" />
     <Content Include="Account\ChangeMyPassword.aspx" />
     <Content Include="Account\ChangeUserPassword.aspx" />
@@ -213,19 +214,21 @@
     <Content Include="Account\RegisterExternalLogin.aspx" />
     <Content Include="Account\ResetPassword.aspx" />
     <Content Include="Account\ResetPasswordConfirmation.aspx" />
+    <Content Include="Account\ResetUserPassword.aspx" />
     <Content Include="Account\TwoFactorAuthenticationSignIn.aspx" />
     <Content Include="Account\VerifyPhoneNumber.aspx" />
     <Content Include="Admin\AssignEntitysToProject.aspx" />
     <Content Include="Admin\AssignGrantToProject.aspx" />
     <Content Include="Admin\AssignPersonsToProject.aspx" />
     <Content Include="Admin\AssignUserToProject.aspx" />
+    <Content Include="Admin\EditAdvancedOptions.aspx" />
     <Content Include="Admin\EditEntity.aspx" />
     <Content Include="Admin\EditPerson.aspx" />
     <Content Include="Admin\EditGLCode.aspx" />
     <Content Include="Admin\EditGrant.aspx" />
     <Content Include="Admin\Obsolete.aspx" />
     <Content Include="Admin\Main.aspx" />
-    <Content Include="Admin\EditAdvancedOptions.aspx" />
+    <Content Include="Admin\EditAdvancedOptionsOld.aspx" />
     <Content Include="Admin\UploadImages.aspx" />
     <Content Include="App_Readme\Elmah.SqlServer.sql" />
     <Content Include="App_Readme\Elmah.SqlServer.txt" />
@@ -234,6 +237,9 @@
     <Content Include="ErrorLog\Error404.aspx" />
     <Content Include="ErrorGeneral.aspx" />
     <Content Include="ErrorLog\FatalError.aspx" />
+    <Content Include="Images\Avatar_Default.jpg" />
+    <Content Include="Images\Avatar_Empty.jpg" />
+    <Content Include="Images\Full_Default.jpg" />
     <Content Include="Lists\ImportProjectBalances.aspx" />
     <Content Include="Lists\ListPortalUsers.aspx" />
     <Content Include="Lists\ListProjectMetadata.aspx" />
@@ -332,6 +338,13 @@
     </Compile>
     <Compile Include="Account\AddPhoneNumber.aspx.designer.cs">
       <DependentUpon>AddPhoneNumber.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Account\ChangeMyAvatarImage.aspx.cs">
+      <DependentUpon>ChangeMyAvatarImage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Account\ChangeMyAvatarImage.aspx.designer.cs">
+      <DependentUpon>ChangeMyAvatarImage.aspx</DependentUpon>
     </Compile>
     <Compile Include="Account\ChangeMyEmailOptions.aspx.cs">
       <DependentUpon>ChangeMyEmailOptions.aspx</DependentUpon>
@@ -466,6 +479,13 @@
     <Compile Include="Account\ResetPasswordConfirmation.aspx.designer.cs">
       <DependentUpon>ResetPasswordConfirmation.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Account\ResetUserPassword.aspx.cs">
+      <DependentUpon>ResetUserPassword.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Account\ResetUserPassword.aspx.designer.cs">
+      <DependentUpon>ResetUserPassword.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Account\TwoFactorAuthenticationSignIn.aspx.cs">
       <DependentUpon>TwoFactorAuthenticationSignIn.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -507,6 +527,13 @@
     </Compile>
     <Compile Include="Admin\AssignUserToProject.aspx.designer.cs">
       <DependentUpon>AssignUserToProject.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\EditAdvancedOptions.aspx.cs">
+      <DependentUpon>EditAdvancedOptions.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\EditAdvancedOptions.aspx.designer.cs">
+      <DependentUpon>EditAdvancedOptions.aspx</DependentUpon>
     </Compile>
     <Compile Include="Admin\EditEntity.aspx.cs">
       <DependentUpon>EditEntity.aspx</DependentUpon>
@@ -550,12 +577,12 @@
     <Compile Include="Admin\Main.aspx.designer.cs">
       <DependentUpon>Main.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Admin\EditAdvancedOptions.aspx.cs">
-      <DependentUpon>EditAdvancedOptions.aspx</DependentUpon>
+    <Compile Include="Admin\EditAdvancedOptionsOld.aspx.cs">
+      <DependentUpon>EditAdvancedOptionsOld.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Admin\EditAdvancedOptions.aspx.designer.cs">
-      <DependentUpon>EditAdvancedOptions.aspx</DependentUpon>
+    <Compile Include="Admin\EditAdvancedOptionsOld.aspx.designer.cs">
+      <DependentUpon>EditAdvancedOptionsOld.aspx</DependentUpon>
     </Compile>
     <Compile Include="Admin\UploadImages.aspx.cs">
       <DependentUpon>UploadImages.aspx</DependentUpon>
@@ -637,6 +664,7 @@
     <Compile Include="Logic\FlowControl.aspx.designer.cs">
       <DependentUpon>FlowControl.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Logic\ImageActions.cs" />
     <Compile Include="Logic\ParseActions.cs" />
     <Compile Include="Logic\ProjectClassActions.cs" />
     <Compile Include="Logic\QueryStringActions.cs" />
@@ -826,6 +854,9 @@
     <Compile Include="Select\SelectProject.aspx.designer.cs">
       <DependentUpon>SelectProject.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Site.Master.designer.cs">
+      <DependentUpon>Site.Master</DependentUpon>
+    </Compile>
     <Compile Include="Staff\StaffDashboard.aspx.cs">
       <DependentUpon>StaffDashboard.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -843,9 +874,6 @@
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Site.Master.designer.cs">
-      <DependentUpon>Site.Master</DependentUpon>
     </Compile>
     <Compile Include="Site.Mobile.Master.cs">
       <DependentUpon>Site.Mobile.Master</DependentUpon>
@@ -865,7 +893,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Images\" />
     <Folder Include="Supporting\" />
   </ItemGroup>
   <ItemGroup>
