--- a/Portal11/packages.config
+++ b/Portal11/packages.config
@@ -23,7 +23,7 @@
   <package id="Microsoft.AspNet.ScriptManager.WebForms" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization.WebForms" version="1.1.3" targetFramework="net45" />
-  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net45" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="2.6.1" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.3.2" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.3.2" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.6.0" targetFramework="net45" developmentDependency="true" />
