--- a/Portal11/Web.config
+++ b/Portal11/Web.config
@@ -20,7 +20,7 @@
   <connectionStrings>
     <!-- TODO: Replace the ****'s with the correct entries -->
     <add name="PortalConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Portal11-20150707103538.mdf;Initial Catalog=aspnet-Portal11-20150707103538;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="elmah-sqlserver" connectionString="Data Source=DAVE-YOGA-900\SQLEXPRESS;Initial Catalog=ElmahLoggedErrors;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="elmah-sqlserver" connectionString="Data Source=DAVE-HP-SPECTRE\SQLEXPRESS;Initial Catalog=ElmahLoggedErrors;Integrated Security=True" providerName="System.Data.SqlClient" />
   <!--<add name="elmah-sqlserver" connectionString="Data Source=****;User ID=****;Password=****;Initial Catalog=****;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <system.web>
